--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 #
 development:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: utf8
   database: project_development
   pool: 5
