--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   password:
 
 test: &TEST
-  adapter: postgresql
+  adapter: sqlite3
   encoding: utf8
   database: project_test
   pool: 5
